Fix tinyMCE wrapping all radius-markup in paragraph-tags
using span element instead of hr now
refactored codeprotect plugin

--- a/public/javascripts/extensions/tiny_mce/tiny_mce_content.css
+++ b/public/javascripts/extensions/tiny_mce/tiny_mce_content.css
@@ -1,4 +1,5 @@
-.mceItemRadiantCode { 
+.mceItemRadiantCode {
+  display: block;
   background: url('./plugins/codeprotect/images/radiant-code.png') no-repeat; 
   height: 18px;
   border: none;
